--- a/storefront/src/assets/styles/base/bulma-settings.scss
+++ b/storefront/src/assets/styles/base/bulma-settings.scss
@@ -2,12 +2,12 @@
 @use "bulma/sass/utilities" with (
   $primary: $color-primary,
 );
+
 @forward "bulma/sass/base";
 @forward "bulma/sass/components/card";
 @forward "bulma/sass/components/modal";
-
 @forward "bulma/sass/elements/button";
-@forward "bulma/sass/elements/icon";
+//@forward "bulma/sass/elements/icon";
 @forward "bulma/sass/elements/content";
 @forward "bulma/sass/elements/title";
 @forward "bulma/sass/elements/notification";
