add information banner

--- a/storefront/src/assets/styles/sass-utils/_variables.scss
+++ b/storefront/src/assets/styles/sass-utils/_variables.scss
@@ -2,3 +2,4 @@ $color-primary: red;
 $color-icons: #C8C8C8;
 $color-light-gray: #787878;
 $text-muted: #AAA;
+$color-categories-background: #FFF9EB;
