fix container sizes for mobile and desktop

--- a/storefront/src/assets/styles/sass-utils/_variables.scss
+++ b/storefront/src/assets/styles/sass-utils/_variables.scss
@@ -3,3 +3,10 @@ $color-icons: #C8C8C8;
 $color-light-gray: #787878;
 $text-muted: #AAA;
 $color-categories-background: #FFF9EB;
+
+// breakpoints
+$screen-sm-max: 576px;
+$screen-md-max: 768px;
+$screen-lg-max: 992px;
+$screen-xl-max: 1200px;
+$screen-xxl-max: 1400px;
