handle click on burger menu

--- a/storefront/src/assets/styles/sass-utils/_variables.scss
+++ b/storefront/src/assets/styles/sass-utils/_variables.scss
@@ -1,5 +1,5 @@
 $color-primary: red;
-$color-icons: #C8C8C8;
+$color-icons: #8f8f8f;
 $color-light-gray: #787878;
 $text-muted: #AAA;
 $color-categories-background: #FFF9EB;
