rename Header components to Navbar; add sticky navbar

--- a/storefront/src/assets/styles/base/bulma-settings.scss
+++ b/storefront/src/assets/styles/base/bulma-settings.scss
@@ -12,6 +12,7 @@
 @forward "bulma/sass/elements/title";
 @forward "bulma/sass/elements/notification";
 @forward "bulma/sass/elements/progress";
+@forward "bulma/sass/elements/image";
 @forward "bulma/sass/elements/tag";
 @forward "bulma/sass/layout/container";
 @use "bulma/sass/layout/section" with (
