--- a/storefront/src/assets/styles/sass-utils/_variables.scss
+++ b/storefront/src/assets/styles/sass-utils/_variables.scss
@@ -2,6 +2,7 @@ $color-primary: red;
 $color-icons: #8f8f8f;
 $color-light-gray: #787878;
 $text-muted: #AAA;
+$color-text: #1E1E1E;
 $color-categories-background: #FFF9EB;
 
 // breakpoints
