Footer; fix styles for sticky categories

--- a/storefront/src/assets/styles/sass-utils/_variables.scss
+++ b/storefront/src/assets/styles/sass-utils/_variables.scss
@@ -4,6 +4,7 @@ $color-light-gray: #787878;
 $text-muted: #AAA;
 $color-text: #1E1E1E;
 $color-categories-background: #FFF9EB;
+$background-gray: #f7f7f7;
 
 // breakpoints
 $screen-sm-max: 576px;
