categories for mobile devices

--- a/storefront/src/assets/styles/sass-utils/_variables.scss
+++ b/storefront/src/assets/styles/sass-utils/_variables.scss
@@ -3,8 +3,8 @@ $color-icons: #8f8f8f;
 $color-light-gray: #787878;
 $text-muted: #AAA;
 $color-text: #1E1E1E;
-$color-categories-background: #FFF9EB;
-$background-gray: #f7f7f7;
+$color-categories-background: #FAFAFA;
+$background-gray: #F7F7F7;
 
 // breakpoints
 $screen-sm-max: 576px;
