category page; responsive item cards

--- a/storefront/src/assets/styles/main.scss
+++ b/storefront/src/assets/styles/main.scss
@@ -1,3 +1,6 @@
-@use "base/bulma-settings";
+@use "vendor/bulma-settings";
 @use "base/grid";
+@use "base/fonts";
+@use "base/title";
+@use "base/typography";
 @use "heplers/helpers";
