--- a/storefront/src/assets/styles/base/_typography.scss
+++ b/storefront/src/assets/styles/base/_typography.scss
@@ -1,28 +1,21 @@
-@use "../sass-utils/variables" as *;
+@use '../sass-utils/variables' as *;
 
 body {
-
 }
 
 h1 {
-
-    @media (max-width: $screen-sm-max) {
-
-    }
+  @media (max-width: $screen-sm-max) {
+  }
 }
 
 h2 {
-
 }
 
 h3 {
-
 }
 
 a {
-
-    &:hover,
-    &:focus {
-
-    }
+  &:hover,
+  &:focus {
+  }
 }
