--- a/storefront/src/assets/styles/sass-utils/_variables.scss
+++ b/storefront/src/assets/styles/sass-utils/_variables.scss
@@ -1,11 +1,11 @@
 $color-primary: red;
-$color-secondary: #02629E;
+$color-secondary: #02629e;
 $color-icons: #8f8f8f;
 $color-light-gray: #787878;
-$text-muted: #AAA;
-$color-text: #1E1E1E;
-$color-categories-background: #FAFAFA;
-$background-gray: #F7F7F7;
+$text-muted: #aaa;
+$color-text: #1e1e1e;
+$color-categories-background: #fafafa;
+$background-gray: #f7f7f7;
 
 // breakpoints
 $screen-sm-max: 576px;
