--- a/storefront/src/assets/styles/base/_title.scss
+++ b/storefront/src/assets/styles/base/_title.scss
@@ -1,4 +1,4 @@
-@use "../sass-utils/variables" as *;
+@use '../sass-utils/variables' as *;
 
 .title {
   &__container {
@@ -9,7 +9,7 @@
     gap: 15px;
     align-items: center;
 
-    & > .title{
+    & > .title {
       margin-bottom: 0;
     }
   }
