fix css styles for Item card

--- a/storefront/src/assets/styles/sass-utils/_variables.scss
+++ b/storefront/src/assets/styles/sass-utils/_variables.scss
@@ -1,4 +1,4 @@
-$color-primary: red;
+$color-primary: rgb(11, 8, 206);
 $color-secondary: #02629e;
 $color-icons: #8f8f8f;
 $color-light-gray: #787878;
