use prettier for all files

--- a/storefront/src/assets/styles/main.scss
+++ b/storefront/src/assets/styles/main.scss
@@ -1,6 +1,6 @@
-@use 'vendor/bulma-settings';
-@use 'base/grid';
-@use 'base/fonts';
-@use 'base/title';
-@use 'base/typography';
-@use 'heplers/helpers';
+@use "vendor/bulma-settings";
+@use "base/grid";
+@use "base/fonts";
+@use "base/title";
+@use "base/typography";
+@use "heplers/helpers";
