loading spinner in header cart

--- a/storefront/src/assets/styles/heplers/_helpers.scss
+++ b/storefront/src/assets/styles/heplers/_helpers.scss
@@ -1,4 +1,10 @@
+@use 'bulma/sass/utilities/mixins';
+
 .overflow-hidden {
   overflow-y: hidden;
   max-height: 100vh;
+}
+
+.loading-spinner {
+  @include mixins.loader;
 }
