--- a/storefront/src/assets/styles/base/_animation.scss
+++ b/storefront/src/assets/styles/base/_animation.scss
@@ -1,8 +1,13 @@
-.fade-in-up-enter-active, .fade-in-left-enter-active, .fade-in-up-leave-active {
+.fade-in-up-enter-active,
+.fade-in-left-enter-active,
+.fade-in-up-leave-active,
+.fade-in-right-enter-active {
   transition: all 0.3s ease;
 }
 
-.fade-in-up-enter-from, .fade-in-left-enter-from {
+.fade-in-up-enter-from,
+.fade-in-left-enter-from,
+.fade-in-right-enter-from {
   opacity: 0;
 }
 
@@ -12,9 +17,23 @@
 
 .fade-in-up-leave-to {
   transform: translateY(30px);
-  opacity: 0;;
+  opacity: 0;
 }
 
 .fade-in-left-enter-from {
-  transform: translateX(30px);
+  transform: translateX(100px);
+}
+
+.fade-in-right-enter-from {
+  transform: translateX(-100px);
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
 }
